feat:contact page

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/s-contact.css">
 </head>
 <body>
+    <!-- NAVBAR -->
     <nav>
         <div class="nav-L">
             <img src="/img/logo/logo-removebg-preview.png" alt="logo">
@@ -20,6 +21,78 @@
             </ul>
         </div>
     </nav>
+
+    <!-- PAGE INTRO -->
+    <div class="page-intro">
+        <h2>We'd Love to Hear From You</h2>
+        <p>If you have any questions, feedback, or just want to say hello, feel free to reach out. Our team will get back to you as soon as possible.</p>
+    </div>
+
+
+    <!-- MAIN-FORM-INFO -->
+    <main>
+        <form action="#" class="form-container">
+            <h3>Get in Touch</h3>
+            <div class="row-parent">
+                <div class="row-child">
+                    <label for="name">Name</label>
+                    <input type="text" id="name">
+                </div>
+                <div class="row-child">
+                    <label for="pp">Purpose</label>
+                    <input type="text" id="pp">
+                </div>
+            </div>
+            <div class="row-parent">
+                <div class="row-child">
+                    <label for="tel">Phone Number</label>
+                    <input type="tel" id="tel">
+                </div>
+                <div class="row-child">
+                    <label for="email">Email</label>
+                    <input type="email" id="email">
+                </div>
+            </div>
+            <div class="row-parent">
+                <div class="row-child">
+                    <label for="ms">Message</label>
+                    <textarea id="ms"></textarea>
+                </div>
+            </div>
+            <button type="submit">Send Message</button>
+        </form>
+
+        <div class="info-card-container">
+            <h3>Contact Information</h3>
+            <div class="info-row-parent">
+                <img src="/img/icon/tel.png" alt="icon">
+                <p>Tel: 092 462 7389</p>
+            </div>
+            <div class="info-row-parent">
+                <img src="/img/icon/email.png" alt="icon">
+                <p>Email: clearybeauty@gmail.com</p>
+            </div>
+            <div class="info-row-parent">
+                <img src="/img/icon/location.png" alt="icon">
+                <p>Location: St 370, Phnom Penh 121301</p>
+            </div>
+            <h3>Follow Us</h3>
+            <div class="social">
+                <div class="social-row-parent">
+                    <img src="/img/icon/tiktok.png" alt="icon">
+                    <p>clearybeauty79</p>
+                </div>
+                <div class="social-row-parent">
+                    <img src="/img/icon/fb.png" alt="icon">
+                    <p>Cleary Beauty</p>
+                </div>
+                <div class="social-row-parent">
+                    <img src="/img/icon/ig.png" alt="icon">
+                    <p>Cleary Beauty</p>
+                </div>
+            </div>
+        </div>
+    </main>
 
     <!-- FOOTER -->
     <footer>
@@ -49,7 +122,7 @@
         </div>
         
         <div class="copyright">
-            <p>© 2025 BeautyGlow. All Rights Reserved.</p>
+            <p>© 2025 ClearyBeauty. All Rights Reserved.</p>
         </div>
     </footer>
 </body>
