Feat: home page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             <ul>
                 <li><a href="#" class="active">HOME</a></li>
                 <li><a href="products.html">PRODUCTS</a></li>
-                <li><a href="about.html">ABOUT</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
@@ -26,6 +25,80 @@
         </div>
     </nav>
 
+    <!-- WELCOME SECTION -->
+     <div class="wel-sec-container">
+         <div class="wel-L">
+             <h2>Cleary Beauty</h2>
+             <p>Confidence in every bottles.</p>
+             <p>From start to finish, the right products in the right order. Consistency is key to achieving healthy, glowing skin over time.</p>
+             <button>Shop Now</button>
+         </div>
+         <img src="/img/logo/BA.png" alt="image">
+     </div>
+
+    <!-- TIPS-CARD-SEC -->
+    <div class="tip-sec">
+        <h2>Sharing is Caring</h2>
+        <div class="tip-card-container">
+            <div class="tip-card">
+                <fieldset>
+                    <legend>
+                        <img src="/img/icon/uv.png" alt="icon">
+                    </legend>
+                    <h3>Protect Your Skin from the Sun</h3>
+                    <p>Sun exposure is a primary cause of wrinkles, dark spots, and other signs of premature aging. Use a broad-spectrum sunscreen with an SPF of at least 30 every day, regardless of the weather.Wear protective clothing like hats and long sleeves.</p>
+                </fieldset>
+            </div>
+            <div class="tip-card">
+                <fieldset>
+                    <legend><img src="/img/icon/clean.png" alt="icon"></legend>
+                    <h3>Cleanse Gently and Consistently</h3>
+                    <p>Cleanse your face twice a day to remove dirt, oil, makeup, and other impurities. Use a mild cleanser that won't strip your skin of its natural oils. Avoid harsh scrubbing, which can irritate your skin and make existing conditions like acne worse.</p>
+                </fieldset>
+            </div>
+            <div class="tip-card">
+                <fieldset>
+                    <legend>
+                        <img src="/img/icon/moit.png" alt="icon">
+                    </legend>
+                    <h3>Moisturize for Hydration</h3>
+                    <p>Moisturizing is essential for all skin types, even oily skin. It helps to hydrate the skin, lock in moisture, and maintain the skin's protective barrier. Choose a moisturizer formulated for your skin type (e.g., a lighter gel for oily skin) and apply it after cleansing to help seal in moisture.</p>
+                </fieldset>
+            </div>
+            <div class="tip-card">
+                <fieldset>
+                    <legend>
+                        <img src="/img/icon/lifestyle.png" alt="icon">
+                    </legend>
+                    <h3>Adopt a Healthy Lifestyle</h3>
+                    <p>What you put into your body and how you live can significantly impact your skin's health. Drink plenty of water to stay hydrated. Eat a balanced diet rich in fruits, vegetables, and healthy fats. Getting enough sleep and managing stress can also help your skin look and feel its best.</p>
+                </fieldset>
+            </div>
+        </div>
+    </div>
+    
+    <!-- SHOP STORY LINE -->
+     <div class="story-sec">
+        <div class="story-L">
+            <div class="story-L1">
+                <img src="/img/1.jpg" alt="image" width="200px">
+            </div>
+            <div class="story-L2">
+                <img src="/img/2.png" alt="image" width="300px">
+            </div>
+            <div class="story-L3">
+                <img src="/img/3.png" alt="image" width="300px">
+            </div>
+            <div class="story-L4">
+                <img src="/img/4.png" alt="image" width="200px">
+            </div>
+        </div>
+        <div class="story-R">
+            <h2>Our Story</h2>
+            <p>In 2014, a young woman named Lina dreamed of creating her own skincare line. She believed deeply in natural ingredients and healthy routines, but back then, not many people trusted skincare products the way they do today. Friends and customers dismissed her efforts, thinking creams and serums were just “luxuries.” Despite her passion, her small business struggled, and eventually, she had to close it down.</p>
+            <p>But Lina never let go of her dream. She kept learning, researching, and experimenting with formulas while waiting for the right time. By 2019, awareness of skincare had changed people were beginning to understand the value of self-care and natural beauty. Lina came back stronger, relaunching her brand with improved products and a clearer vision.</p>
+        </div>
+     </div>
     <!-- FOOTER -->
     <footer>
         <div class="foot-top-container">
